--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,6 @@
       - HomeFeatures2.vue. DONE
   - Study groups:
     - Use _slug instead of _id for each study group. DONE
+  - Refactor: 
+    - Move /assets to the root.
+    - Pass TheFooter and TheNavbar to the /layout folder.
