feat: improve navbar desktop view, add resources HTML & update todo

--- a/todo.txt
+++ b/todo.txt
@@ -11,3 +11,4 @@
   - Refactor: 
     - Move /assets to the root.
     - Pass TheFooter and TheNavbar to the /layout folder.
+    - Fix mobile navbar.
