--- a/todo.txt
+++ b/todo.txt
@@ -17,4 +17,5 @@
     - Split up the navbar, on the one hand, and the texts, on the other hand.
   - Design:
     - Fix avatar.svg to take the Monserrat font.
+  - Move project to TypeScript.
   
