--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 - TO-DO:
+  - Change "main" branch by "master" branch.
   - Only refactor the HTML/JS/CSS website to Nuxt/SASS.
     - Don't new features! It's only a refactoring.
   - Home:
