--- a/todo.txt
+++ b/todo.txt
@@ -1,26 +1,28 @@
-- TO-DO:
-  - Change "main" branch by "master" branch.
-  - Only refactor the HTML/JS/CSS website to Nuxt/SASS.
-    - Don't new features! It's only a refactoring.
-  - Home:
-    - Components to show:
-      - HomeHero.vue. DONE
-      - HomeAbout.vue. DONE
-      - HomeFeatures2.vue. DONE
-  - Study groups:
-    - Use _slug instead of _id for each study group. DONE
-  - Refactor: 
-    - Move /assets to the root. DONE
-    - Pass TheFooter and TheNavbar to the /layout folder. DONE
-    - Fix mobile navbar.
-  - Documents:
-    - Build routes for each document/markdown (area/department).
-    - Split up the navbar, on the one hand, and the texts, on the other hand.
-  - Design:
-    - Fix avatar.svg to take the Monserrat font.
-  - Move project to TypeScript.
-  - Resources: 
-    - Implement the forrt resources in the resources view.
-      - Implement filters:
-        - by buttons: "All", "Reproducible Analyses", "Open Data and Materials", "Reproducibility and Replicability Knowledge", "Replication Research", "Conceptual and Statistical Knowledge", "Preregistration".
-        - by title.
+- Change "main" branch by "master" branch.
+- Only refactor the HTML/JS/CSS website to Nuxt/SASS.
+  - Don't new features! It's only a refactoring.
+- Home:
+  - Components to show:
+    - HomeHero.vue. DONE
+    - HomeAbout.vue. DONE
+    - HomeFeatures2.vue. DONE
+- Study groups:
+  - Use _slug instead of _id for each study group. DONE
+- Refactor: 
+  - Move /assets to the root. DONE
+  - Pass TheFooter and TheNavbar to the /layout folder. DONE
+  - Fix mobile navbar.
+- Documents:
+  - Build routes for each document/markdown (area/department).
+  - Split up the navbar, on the one hand, and the texts, on the other hand.
+- Design:
+  - Fix avatar.svg to take the Monserrat font.
+- Move project to TypeScript.
+- Resources: 
+  - Implement the forrt resources in the resources view.
+    - Implement filters:
+      - by buttons: "All", "Reproducible Analyses", "Open Data and Materials", "Reproducibility and Replicability Knowledge", "Replication Research", "Conceptual and Statistical Knowledge", "Preregistration".
+      - by title.
+- Next features: 
+  - Learning platform to learn evidence-based psychology stuff.
+  - Ecommerce to buy t-shirts, toys, and funny stuff evidence-based and psychology-related. 
