chore: update todo

--- a/todo.txt
+++ b/todo.txt
@@ -25,4 +25,5 @@
       - by title.
 - Next features: 
   - Learning platform to learn evidence-based psychology stuff.
-  - Ecommerce to buy t-shirts, toys, and funny stuff evidence-based and psychology-related. 
+  - Ecommerce to buy t-shirts, toys, and funny stuff evidence-based and psychology-related.
+- Two buttons in the navbar for "Log in" and "Sign up", respectively. 
