chore: update todo

--- a/todo.txt
+++ b/todo.txt
@@ -27,3 +27,5 @@
   - Learning platform to learn evidence-based psychology stuff.
   - Ecommerce to buy t-shirts, toys, and funny stuff evidence-based and psychology-related.
 - Two buttons in the navbar for "Log in" and "Sign up", respectively. 
+- Navbar:
+  - ... Recursos | Aprender -> e-learning platform | Aportar (-> ecommerce)
