--- a/todo.txt
+++ b/todo.txt
@@ -29,4 +29,6 @@
 - Two buttons in the navbar for "Log in" and "Sign up", respectively. 
 - Navbar:
   - ... Recursos | Aprender -> e-learning platform | Aportar (-> ecommerce)
+    - Aprender -> "/learn"
+    - Aportar -> "/shop"
 - Think more about refactoring this project using Angular (specially for security issues).
