chore: update todo

--- a/todo.txt
+++ b/todo.txt
@@ -34,3 +34,4 @@
 - Think more about refactoring this project using Angular (specially for security issues).
 - First of all:
   - _Make the e-learning platform_.
+- Create a platform to write posts easily, so that the website can be used as a Blog written by psychology students.
