chore: update todo

--- a/todo.txt
+++ b/todo.txt
@@ -36,4 +36,5 @@
   - _Make the e-learning platform_.
 - Create a platform to write posts easily, so that the website can be used as a Blog written by psychology students.
 - ***Move the project to Next/React/TypeScript***. 
-  - And I could implement Chakra as a CSS-in-JS tool.
+  - And I could implement Chakra as a CSS-in-JS tool. DISMISSED
+- Implement Styled Components as a main CSS-in-JS tool.
