--- a/todo.txt
+++ b/todo.txt
@@ -38,3 +38,7 @@
 - ***Move the project to Next/React/TypeScript***. 
   - And I could implement Chakra as a CSS-in-JS tool. DISMISSED
 - Implement Styled Components as a main CSS-in-JS tool.
+- Instead of "Iniciar sesión", it could be "Publicá". 
+  - And if the user is not logged in, show the pop-up asking them to be logged in.
+- Remove the "Recursos", "Grupos de estudio", and "Documentos" sections from the navbar.
+  - In case it was decided to keep them, it's better to put them in the footer.
