style: remove some sections | chore: update todo

--- a/todo.txt
+++ b/todo.txt
@@ -42,3 +42,4 @@
   - And if the user is not logged in, show the pop-up asking them to be logged in.
 - Remove the "Recursos", "Grupos de estudio", and "Documentos" sections from the navbar.
   - In case it was decided to keep them, it's better to put them in the footer.
+- Add Tailwind.
