chore: update todo v2

--- a/todo.txt
+++ b/todo.txt
@@ -48,3 +48,5 @@
 - 'Artículos': 
   - This section will have ALL THE ARTICLES `PUBLISHED`.
   - It will also have their respective author (as an `USER` inside the models). 
+  - Instagram posts will be passed to this section.
+    - The writers will have a `user`, or just a link to their social networks (Instagram, generally).
