--- a/todo.txt
+++ b/todo.txt
@@ -56,3 +56,5 @@
   - Logueate
     - After the user was logged in, he/she is redirected to one view where he/she is allowed to upload a ***Google Doc link*** with the article.
 - Create a different layout for /admin y for the client view.
+- If you are an ADMIN, you can see other things that an AUTHENTICATED user can't. 
+  - However, both of them will see a DASHBOARD to PUBLISH (admin) and UPLOAD (authenticated) articles!
